--- a/css/styles.css
+++ b/css/styles.css
@@ -119,15 +119,12 @@ body {
   z-index: 2;
 }
 .nav {
- 
   background-color: #253242d7;
-  
 }
 .nav__items {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-left: -5px;
   position: relative;
 }
 .nav__link {
@@ -143,7 +140,6 @@ body {
   color: #000;
 }
 .nav__link {
-
 }
 .nav__link:last-child {
   margin-left: auto;
@@ -154,7 +150,6 @@ body {
 }
 .nav__item {
   padding: 0.5em 1.5em;
-
 }
 
 .sub-nav__items {
@@ -168,8 +163,7 @@ body {
   position: absolute;
   left: 196px;
 }
-.statistic{
-
+.statistic {
   left: 429px;
 }
 .sub-nav__link {
@@ -233,7 +227,6 @@ body {
   background-color: rgb(205, 217, 255);
 }
 
-
 /* Dropdown Button */
 .dropbtn {
   background-color: #3498db;
@@ -257,7 +250,7 @@ body {
 }
 .popup__body {
   width: 450px;
-  background:  url("../images/bg/bg-nav.png") rgb(100, 100, 102) repeat ;
+  background: url("../images/bg/bg-nav.png") rgb(100, 100, 102) repeat;
   margin: 0 auto;
   margin-top: 5%;
   display: flex;
@@ -265,7 +258,7 @@ body {
   z-index: 3;
   position: relative;
 }
-#closePopup{
+#closePopup {
   position: absolute;
   top: 10px;
   right: 20px;
@@ -275,17 +268,15 @@ body {
   text-transform: uppercase;
   transition: 0.5s ease-in-out;
 }
-#closePopup:hover{
-  color:  white;
+#closePopup:hover {
+  color: white;
 }
 .popup__form {
   padding: 50px 0;
-
 }
 .form {
   display: flex;
   flex-direction: column;
-
 }
 .form__label {
 }
@@ -296,7 +287,7 @@ body {
   padding: 20px;
   font-size: 20px;
 }
-.form__btn{
+.form__btn {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -309,10 +300,10 @@ body {
   color: #aeb3b9;
   transition: 500ms ease-in-out;
 }
-.form__btn:hover{
+.form__btn:hover {
   background: #253242;
 }
-.popup__area{
+.popup__area {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -320,13 +311,23 @@ body {
   left: 0;
   z-index: -1;
 }
-._active{
+._active {
   display: block;
 }
 
 @media (max-width: 799px) {
+  .nav {
+    background-color: #253242d7;
+  }
+  .nav__link {
+    flex: 0 0 33.3%;
+  }
   .nav__link:last-child {
-    margin-left: 5px;
+    margin-left: 0;
+  }
+  .nav__item {
+    padding: 0.5em 0.5em;
+  
   }
   .monitoring {
     font-size: 2em;
@@ -340,8 +341,8 @@ body {
   }
 }
 
-@media (max-width: 512px){
-  .popup__body{
+@media (max-width: 512px) {
+  .popup__body {
     width: 250px;
   }
   .form__label {
@@ -350,7 +351,10 @@ body {
     width: 200px;
     font-size: 16px;
   }
-  .form__btn{
+  .form__btn {
     font-size: 16px;
+  }
+  .nav__link {
+    flex: 0 0 50%;
   }
 }
