--- a/css/styles.css
+++ b/css/styles.css
@@ -81,25 +81,33 @@ body {
 }
 
 .header {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  top: 0;
-  z-index: 10;
-  background-color: #fff;
+
 }
 
 .header__container {
 }
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 175px;
+  top: 0;
+  left: 0;
+  background-color: #2c2e43;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: -1;
+}
 
 .logo {
-  position: relative;
-  padding: 50px 0;
+  padding: 0;
   text-align: center;
+  margin-top: 68px;
   font-size: 38px;
+  margin-bottom: 64px;
 }
 .logo__link {
-  position: relative;
   z-index: 2;
   color: #fff;
   text-transform: uppercase;
@@ -109,8 +117,8 @@ body {
   object-position: top;
 }
 .logo__image {
-  position: absolute;
-  min-width: 100%;
+
+  min-width: 100vw;
   height: 100%;
   top: 0;
   left: 0;
@@ -154,19 +162,19 @@ body {
 
 .sub-nav__items {
   position: absolute;
-  top: 48px;
-  left: 92px;
+  top: 50px;
+  left: 112px;
   background-color: rgba(0, 0, 0, 0.4);
   display: none;
 }
 .rule {
   position: absolute;
-  left: 196px;
-  top: 48px;
+  left: 205px;
+  top: 50px;
 }
 .statistic {
-  top: 48px;
-  left: 429px;
+  top: 50px;
+  left: 455px;
 }
 .sub-nav__link {
   display: inline-block;
@@ -179,34 +187,9 @@ body {
 }
 .page {
   flex: 1 1 auto;
-  margin-top: 300px;
+
 }
-.page__container {
-  display: flex;
-  flex-direction: column;
-}
-.page__monitoring {
-  padding: 50px 0px;
-  position: relative;
-  background-color: rgb(115, 170, 170);
-}
-.monitoring {
-  text-align: center;
-  font-size: 5em;
-  color: #fff;
-  text-transform: uppercase;
-}
-.page__chat {
-  margin-top: 1.5em;
-  padding: 50px 0px;
-  background-color: rgb(115, 170, 170);
-}
-.chat {
-  text-align: center;
-  font-size: 5em;
-  color: #fff;
-  text-transform: uppercase;
-}
+
 .footer {
 }
 .footer__container {
@@ -320,7 +303,6 @@ body {
 @media (max-width: 799px) {
   .nav {
     background-color: #253242d7;
-    
   }
   .nav__link {
     flex: 0 0 33.3%;
@@ -330,7 +312,6 @@ body {
   }
   .nav__item {
     padding: 0.5em 0.5em;
-  
   }
   .monitoring {
     font-size: 2em;
@@ -361,3 +342,13 @@ body {
     flex: 0 0 50%;
   }
 }
+
+body {
+  margin: 0;
+  font: normal 75% Arial, Helvetica, sans-serif;
+}
+canvas {
+  display: block;
+  vertical-align: bottom;
+} /* ---- particles.js container ---- */
+
