--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,8 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
+  background-image: url('../images/bg/bg_main.png');
+  z-index: -5;
 }
 ._container {
   max-width: 1200px;
@@ -81,9 +83,12 @@ body {
 }
 
 .header {
-
 }
-
+.header-logo__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .header__container {
 }
 #particles-js {
@@ -101,33 +106,26 @@ body {
 }
 
 .logo {
-  padding: 0;
-  text-align: center;
-  margin-top: 68px;
-  font-size: 38px;
-  margin-bottom: 64px;
 }
+
 .logo__link {
   z-index: 2;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
-.logo__link image {
-  object-position: top;
-}
-.logo__image {
 
-  min-width: 100vw;
-  height: 100%;
-  top: 0;
-  left: 0;
+.logo__image {
+  margin-top: -20px;
+  width: 650px;
+  height: 172px;
 }
 .header__nav {
   z-index: 2;
 }
 .nav {
   background-color: #253242d7;
+  margin-top: 20px;
 }
 .nav__items {
   display: flex;
@@ -162,19 +160,19 @@ body {
 
 .sub-nav__items {
   position: absolute;
-  top: 50px;
-  left: 112px;
+  top: 48px;
+  left: 92px;
   background-color: rgba(0, 0, 0, 0.4);
   display: none;
 }
 .rule {
   position: absolute;
-  left: 205px;
-  top: 50px;
+  left: 190px;
+  top: 48px;
 }
 .statistic {
-  top: 50px;
-  left: 455px;
+  top: 48px;
+  left: 430px;
 }
 .sub-nav__link {
   display: inline-block;
@@ -187,7 +185,6 @@ body {
 }
 .page {
   flex: 1 1 auto;
-
 }
 
 .footer {
@@ -296,9 +293,6 @@ body {
   left: 0;
   z-index: -1;
 }
-._active {
-  display: block;
-}
 
 @media (max-width: 799px) {
   .nav {
@@ -321,11 +315,35 @@ body {
     font-size: 2em;
   }
   .page {
-    margin-top: 350px;
+
+  }
+  .popup__body {
+    margin-top: 110px;
+
+  }
+  .sub-nav__items {
+    top: 64px;
+    left: 0px;
+    width: 100%;
+  }
+  .rule {
+    top: 64px;
+    left: 0px;
+    width: 100%;
+  }
+  .statistic {
+    top: 64px;
+    left: 0px;
+    width: 100%;
   }
 }
 
 @media (max-width: 512px) {
+  .logo__image {
+    margin-top: -20px;
+    width: 480px;
+    height: 172px;
+  }
   .popup__body {
     width: 250px;
   }
@@ -341,14 +359,23 @@ body {
   .nav__link {
     flex: 0 0 50%;
   }
+  .sub-nav__items {
+    top: 96px;
+    left: 0px;
+
+  }
+  .rule {
+    top: 96px;
+    left: 0px;
+
+  }
+  .statistic {
+    top: 96px;
+    left: 0px;
+
+  }
 }
 
-body {
-  margin: 0;
-  font: normal 75% Arial, Helvetica, sans-serif;
-}
-canvas {
+._active {
   display: block;
-  vertical-align: bottom;
-} /* ---- particles.js container ---- */
-
+}
