add bg color header

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ body {
   height: 175px;
   top: 0;
   left: 0;
-  background-color: #2c2e43;
+  background-color: #314052;
   background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
